[issue - 1] Tweaks to bring styling in line

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -56,11 +56,11 @@ a {
 }
 
 .intro {
-    background: url(../img/Hexagon-3-Darker.png) no-repeat bottom center scroll;
+    background-image: url(../img/Hexagon-3-Darker.png);
 }
 
 .download-section {
-    background: url(../img/DECaFbg2-Darker.png) no-repeat center center scroll;
+    background-image: url(../img/DECaFbg2-Darker.png);
 }
 
 @media(min-width:767px) {
